# PROYECTO_PROG_IV_CPP

./: BD.cpp  BD.h  CMakeLists.txt  ConMemoria.cpp  ConMemoria.h  Dispositivo.cpp  Dispositivo.h  Estructuras.h  Ordenador.cpp  Ordenador.h  Tele.cpp  Tele.h  Telefono.cpp  Telefono.h  Usuario.cpp  Usuario.h  Venta.cpp  Venta.h  ff.cpp  ff.h  main.cpp
