cmake_minimum_required(VERSION 3.17)
project(PROYECTO_PROG_IV_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(PROYECTO_PROG_IV_C__ main.cpp Dispositivo.cpp Dispositivo.h Usuario.cpp Usuario.h ConMemoria.cpp ConMemoria.h Estructuras.h Telefono.cpp Telefono.h Tele.cpp Tele.h Ordenador.cpp Ordenador.h BD.cpp BD.h Venta.cpp Venta.h)